# pocket-remote

./: .gitignore  DEVELOPMENT_NOTES.md  NOTARIZATION_CREDENTIALS.md  README.md
.github/workflows/: build.yml
desktop/: index.html  package-lock.json  package.json  vite
desktop/src/: App.tsx  i18n.ts  styles.css
desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: accessibility.rs  h264_encoder.rs  input_control.rs  lib.rs  main.rs  pty_session.rs  screen_capture.rs  system_control.rs  webrtc_screen.rs
desktop/~/.tauri/: pocket-remote-v4.key  pocket-remote-v4.key.pub
mobile/: README.md  pubspec.yaml
mobile/android/: SIGNING_KEY_INFO.md  gradle.properties
mobile/android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
mobile/ios/: Podfile
mobile/ios/Runner/: AppDelegate.swift  Configuration.storekit  GoogleService-Info.plist  H264Decoder.swift  Info.plist  Runner.entitlements
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/models/: command.dart  connection_info.dart
mobile/lib/screens/: commands_screen.dart  paywall_screen.dart  scan_screen.dart  screen_share_screen.dart  splash_screen.dart  terminal_screen.dart
mobile/lib/services/: webrtc_service.dart  (+6 more)
mobile/test/: widget_test.dart
website/: .firebaserc  firebase.json
website/.firebase/: hosting.cHVibGlj.cache
website/b19/: dispute.html  index.html  privacy.html  terms.html
website/public/: index.html
(+6 files in other folders)
