[package]
name = "pocket-remote"
version = "1.5.7"
description = "Remote desktop control from mobile"
authors = ["you"]
edition = "2021"

[lib]
name = "pocket_remote_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
local-ip-address = "0.6"
parking_lot = "0.12"

# 並列処理
rayon = "1.10"

# WebRTC画面共有
webrtc = "0.11"
scrap = "0.5"
enigo = "0.2"
bytes = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
flate2 = "1.0"
tar = "0.4"

# PTY（疑似ターミナル）サポート
portable-pty = "0.8"

# H.264エンコーディング
openh264 = { version = "0.6", features = ["source"] }
once_cell = "1.19"

# macOS アクセシビリティ権限チェック
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
